# CRUD-FullStack-PWA-in-Rust-and-Svelte

./: .gitattributes  README.md  setup_cloudinary.sh
backend/: .env  .gitignore  Cargo.toml
backend/.cargo/: config.toml
backend/.sqlx/: query-0271cee4bc0f087f54029fe355b390aaa93326981d2d1b00d1188a637f1cc24b.json  query-02a397a824de10e4ff44f3d6715b6610761c674e7b77e0d490ee2b5bed8bb5f4.json  query-04771a43be39e74728ba18cae0aa3fcab1bea4c077d8dc07dd7593093d5e9089.json  query-05e834a29ff8b5284ded19c2a39409cd06cb9ceeb0f18e16a12aed1338746411.json  query-05f566a24f520bac6c527ff43833bdb07e7c06a89a4b64558da84458fcbac3dd.json  query-099173e9375fbffe7c65a807fddaa7744ac7d6f5b0e042176ea829036e2456d1.json  query-0a96e048f8b035e093bf6d2641b618009e5dba2362f53b81437ae4f6a748c342.json  query-162f2602dd9c74ba02c94404dfe3f6f968916408947da1b7ed0024433eeaaea9.json  query-1ad636474e97700ac755965e68a00ad06ff38672be945b7dcf1526c4be0fc392.json  query-1de510d336ded6e93b927b044c7e08dac0af08d93cd1b75a5f9d72d8cde68cf0.json  query-24c24d3ad814976f4dda18cdbda297aac4be8860c85029bb93c739309060baa1.json  query-2e465c3f5f3b3fb29f51cefabfab678ae2f60db0bfdbd437fb00618618b0ab5e.json  query-32ee3dc53e72f7551406c1b1344e16873b0524c8723b178041c5a8db62a33f4a.json  query-46f700c353c2372259d3d97fee0ade4234f0e83fc09ffb1dfc58535aa443c19c.json  query-4790f6410ed0a0314244478adf3be2e48abf535f255acadfecf08f6751e1681e.json  query-4ab1d153a9b52dc7adb479f7c33adbdd9d7f77473fa653a53ac0db37acef3552.json  query-548e3ed4b04eab094f0e1d1fa4a5aaff91638da248b7ef2df36f9f100e786a31.json  (+32 more)
backend/database/: database.sqlite  (+2 more)
(+72 files in other folders)
